tests/baselines/reference/parser509534.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509534.ts(2,14): error TS2304: Cannot find name 'require'.
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509534.ts(3,1): error TS2304: Cannot find name 'module'.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509534.ts (2 errors) ====
    "use strict";
    var config = require("../config");
                 ~~~~~~~
!!! error TS2304: Cannot find name 'require'.
    module.exports.route = function (server) {
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
     
     // General Login Page
     server.get(config.env.siteRoot + "/auth/login", function (req, res, next) {
      
      // TODO Should render login page that shows auth options
      req.redirect("/auth/live");
     });
    }
    